@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/mechanize
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mechanize/ChangeLog,v 1.17 2009/03/18 18:00:04 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/mechanize/ChangeLog,v 1.18 2009/05/10 18:41:27 a3li Exp $
+
+*mechanize-0.9.2 (10 May 2009)
+
+  10 May 2009; Alex Legler <a3li@gentoo.org> -mechanize-0.6.11.ebuild,
+  -mechanize-0.7.6.ebuild, +mechanize-0.9.2.ebuild:
+  Version bump, removing old.
 
   18 Mar 2009; Brent Baude <ranger@gentoo.org> mechanize-0.9.0.ebuild:
   keyworded ~arch for ppc, bug 252676
